--- a/cryptositeanalysis.ipynb
+++ b/cryptositeanalysis.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b08975d3",
    "metadata": {},
    "outputs": [],
@@ -144,10 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bf4bed6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df"
    ]
@@ -198,12 +210,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d34ecda2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5.count()"
+    "# df5.count()"
    ]
   },
   {
@@ -291,6 +303,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2cc470a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d03fc11",
    "metadata": {},
    "outputs": [],
    "source": []
